--- a/trading-view-chart.html
+++ b/trading-view-chart.html
@@ -12,22 +12,42 @@
 	<body>
 
 <!-- TradingView Widget BEGIN -->
-<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-<script type="text/javascript">
-new TradingView.widget({
-  "autosize": true,
-  "symbol": "BITSTAMP:BTCUSD",
-  "interval": "D",
-  "timezone": "Etc/UTC",
-  "theme": "Light",
-  "style": "1",
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/" rel="noopener nofollow" target="_blank"><span class="blue-text">Ticker tape</span></a><span class="trademark"> by TradingView</span></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  {
+  "symbols": [
+    {
+      "proName": "FOREXCOM:SPXUSD",
+      "title": "S&P 500 Index"
+    },
+    {
+      "proName": "NASDAQ:QQQ",
+      "title": "QQQ Index"
+    },
+    {
+      "proName": "CBOEFTSE:RUT",
+      "title": "Russel 2000 Index"
+    },
+    {
+      "proName": "COINBASE:BTCUSD",
+      "title": "Bitcoin"
+    },
+    {
+      "proName": "FX_IDC:USDCLP",
+      "title": "USD/CLP"
+    }
+  ],
+  "colorTheme": "light",
   "locale": "en",
-  "toolbar_bg": "#f1f3f6",
-  "enable_publishing": false,
-  "allow_symbol_change": true,
-  "hideideas": true
-});
-</script>
+  "largeChartUrl": "",
+  "isTransparent": true,
+  "showSymbolLogo": true,
+  "displayMode": "adaptive"
+}
+  </script>
+</div>
 <!-- TradingView Widget END -->
 
 	</body>
