--- a/trading-view-anto2.html
+++ b/trading-view-anto2.html
@@ -20,7 +20,7 @@
   "symbol": "TURQUOISE:ANTOL",
   "colorTheme": "light",
   "displayMode": "regular",
-  "isTransparent": false,
+  "isTransparent": true,
   "locale": "en",
   "width": "100%",
   "height": "100%"
