--- a/trading-view-anto3.html
+++ b/trading-view-anto3.html
@@ -19,7 +19,7 @@
   {
   "symbol": "NYSE:FCX",
   "colorTheme": "light",
-  "isTransparent": false,
+  "isTransparent": true,
   "locale": "en",
   "width": "100%"
 }
