--- a/trading-view-chart.html
+++ b/trading-view-chart.html
@@ -24,19 +24,11 @@
     },
     {
       "proName": "NASDAQ:QQQ",
-      "title": "QQQ Index"
+      "title": "QQQ"
     },
     {
-      "proName": "CBOEFTSE:RUT",
-      "title": "Russel 2000 Index"
-    },
-    {
-      "proName": "COINBASE:BTCUSD",
-      "title": "Bitcoin"
-    },
-    {
-      "proName": "FX_IDC:USDCLP",
-      "title": "USD/CLP"
+      "proName": "IG:RUSSELL",
+      "title": "Russell 2000"
     }
   ],
   "colorTheme": "light",
